ext/query_parser/parser.c

#line 1 "ext/query_parser/parser.rl"
/**
 * Query parser
 *
 * Copyright (c) 2020 Vinicius Stock
 * Available under the MIT License
 */

#include "parser.h"
#include "params.h"

static VALUE rb_mEncoding;
static VALUE utf_8;
static VALUE rb_cParams;
static VALUE rb_eParameterTypeError;


#line 85 "ext/query_parser/parser.rl"



#line 24 "ext/query_parser/parser.c"
static const int parser_start = 0;
static const int parser_first_final = 14;
static const int parser_error = -1;

static const int parser_en_main = 0;


#line 88 "ext/query_parser/parser.rl"

static VALUE make_params(VALUE self) {
    return rb_funcall(rb_iv_get(self, "@params_class"),
                      rb_intern("new"),
                      1,
                      rb_iv_get(self, "@key_space_limit"));
}

static VALUE parse(int argc, VALUE* argv, VALUE self) {
    VALUE query_string, separator, unescaper;
    rb_scan_args(argc, argv, "11&", &query_string, &separator, &unescaper);
    // TODO: how to pass separator to Ragel?

    if (NIL_P(query_string)) query_string = rb_obj_freeze(rb_str_new_cstr(""));

    rb_encoding *encoding = rb_enc_get(query_string);
    const char *p = RSTRING_PTR(query_string);
    const char *pe = p + RSTRING_LEN(query_string);
    const char *eof = pe;
    const char *buffer;
    int cs = 0, encoded = 0;
    VALUE current_key = Qnil, current_value = Qnil, temp_value = Qnil;
    VALUE parameters = make_params(self);

    if (NIL_P(unescaper)) {
        unescaper = rb_funcall(rb_obj_class(self), rb_intern("method"), 1, ID2SYM(rb_intern("unescape")));
    }

    
#line 62 "ext/query_parser/parser.c"
	{
	cs = parser_start;
	}

#line 67 "ext/query_parser/parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr79:
#line 40 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_ary_push(temp_value, current_value));
            } else {
                params_set(parameters, current_key, rb_ary_new_from_args(2, temp_value, current_value));
            }
        } else {
            params_set(parameters, current_key, current_value);
        }
    }
	goto st0;
tr82:
#line 58 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_funcall(temp_value, rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            } else {
                params_set(parameters, current_key, rb_funcall(rb_ary_new_from_args(1, temp_value), rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            }
        } else {
            params_set(parameters, current_key, rb_str_split(current_value, ","));
        }
    }
	goto st0;
st0:
	if ( ++p == pe )
		goto _test_eof0;
case 0:
#line 117 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr1;
		case 37: goto tr2;
		case 43: goto tr3;
		case 95: goto tr1;
		case 126: goto tr1;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto tr1;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr1;
		} else if ( (*p) >= 64 )
			goto tr1;
	} else
		goto tr1;
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	if ( (*p) == 37 )
		goto st2;
	goto st1;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 37 )
		goto st18;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st1;
	goto st14;
tr34:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 163 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto tr29;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr30;
	goto tr28;
tr28:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 179 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto tr31;
	goto tr30;
tr30:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 193 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st17;
	goto st16;
tr31:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 207 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st18;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st16;
	goto st14;
tr29:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 223 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto tr29;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr30;
	goto tr34;
tr1:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
	goto st3;
tr3:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st3;
tr9:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 257 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto st3;
		case 37: goto tr8;
		case 43: goto tr9;
		case 61: goto tr10;
		case 91: goto tr11;
		case 95: goto st3;
		case 126: goto st3;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto st3;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st3;
		} else if ( (*p) >= 64 )
			goto st3;
	} else
		goto st3;
	goto st1;
tr2:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st4;
tr8:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 300 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st18;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st14;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 37 )
		goto st2;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st3;
	} else
		goto st3;
	goto st1;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 37 )
		goto tr29;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr35;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr36;
	} else
		goto tr36;
	goto tr28;
tr56:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
	goto st20;
tr58:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st20;
tr39:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st20;
tr35:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st20;
tr75:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 386 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto st20;
		case 37: goto tr38;
		case 43: goto tr39;
		case 61: goto tr40;
		case 91: goto tr41;
		case 95: goto st20;
		case 126: goto st20;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto st20;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st20;
		} else if ( (*p) >= 64 )
			goto st20;
	} else
		goto st20;
	goto st16;
tr57:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st21;
tr38:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st21;
tr74:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 439 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st18;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st22;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st14;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 37 )
		goto st17;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st20;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st20;
	} else
		goto st20;
	goto st16;
tr40:
#line 32 "ext/query_parser/parser.rl"
	{
        current_key = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_key = rb_funcall(unescaper, rb_intern("call"), 1, current_key);

        current_key = rb_obj_freeze(current_key);
    }
	goto st23;
tr76:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 32 "ext/query_parser/parser.rl"
	{
        current_key = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_key = rb_funcall(unescaper, rb_intern("call"), 1, current_key);

        current_key = rb_obj_freeze(current_key);
    }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 494 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr43;
		case 37: goto tr44;
		case 43: goto tr45;
		case 95: goto tr43;
		case 126: goto tr43;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto tr43;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr43;
		} else if ( (*p) >= 64 )
			goto tr43;
	} else
		goto tr43;
	goto st16;
tr43:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
	goto st24;
tr45:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st24;
tr49:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st24;
tr51:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st24;
tr55:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 558 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto st24;
		case 37: goto tr47;
		case 38: goto tr48;
		case 43: goto tr49;
		case 59: goto tr48;
		case 95: goto st24;
		case 126: goto st24;
	}
	if ( (*p) < 64 ) {
		if ( 35 <= (*p) && (*p) <= 58 )
			goto st24;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st24;
	} else
		goto st24;
	goto st16;
tr44:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st25;
tr47:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st25;
tr53:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 608 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st18;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st26;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st27;
	} else
		goto st27;
	goto st14;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 37 )
		goto st17;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st24;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st24;
	} else
		goto st24;
	goto st16;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 37 )
		goto tr29;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr52;
	} else
		goto tr52;
	goto tr28;
tr52:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st28;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
#line 660 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr51;
		case 37: goto tr53;
		case 38: goto tr54;
		case 43: goto tr55;
		case 59: goto tr54;
		case 95: goto tr51;
		case 126: goto tr51;
	}
	if ( (*p) < 64 ) {
		if ( 35 <= (*p) && (*p) <= 58 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr30;
tr48:
#line 40 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_ary_push(temp_value, current_value));
            } else {
                params_set(parameters, current_key, rb_ary_new_from_args(2, temp_value, current_value));
            }
        } else {
            params_set(parameters, current_key, current_value);
        }
    }
	goto st29;
tr54:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 40 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_ary_push(temp_value, current_value));
            } else {
                params_set(parameters, current_key, rb_ary_new_from_args(2, temp_value, current_value));
            }
        } else {
            params_set(parameters, current_key, current_value);
        }
    }
	goto st29;
tr66:
#line 58 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_funcall(temp_value, rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            } else {
                params_set(parameters, current_key, rb_funcall(rb_ary_new_from_args(1, temp_value), rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            }
        } else {
            params_set(parameters, current_key, rb_str_split(current_value, ","));
        }
    }
	goto st29;
tr72:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 58 "ext/query_parser/parser.rl"
	{
        current_value = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_value = rb_funcall(unescaper, rb_intern("call"), 1, current_value);

        temp_value = params_access(parameters, current_key);

        if (RTEST(temp_value)) {
            if (RTEST(rb_obj_is_kind_of(temp_value, rb_cArray))) {
                params_set(parameters, current_key, rb_funcall(temp_value, rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            } else {
                params_set(parameters, current_key, rb_funcall(rb_ary_new_from_args(1, temp_value), rb_intern("concat"), 1, rb_str_split(current_value, ",")));
            }
        } else {
            params_set(parameters, current_key, rb_str_split(current_value, ","));
        }
    }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 771 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr56;
		case 37: goto tr57;
		case 43: goto tr58;
		case 95: goto tr56;
		case 126: goto tr56;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto tr56;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr56;
		} else if ( (*p) >= 64 )
			goto tr56;
	} else
		goto tr56;
	goto st16;
tr41:
#line 32 "ext/query_parser/parser.rl"
	{
        current_key = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_key = rb_funcall(unescaper, rb_intern("call"), 1, current_key);

        current_key = rb_obj_freeze(current_key);
    }
	goto st30;
tr77:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 32 "ext/query_parser/parser.rl"
	{
        current_key = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_key = rb_funcall(unescaper, rb_intern("call"), 1, current_key);

        current_key = rb_obj_freeze(current_key);
    }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 819 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 37: goto st17;
		case 93: goto st31;
	}
	goto st16;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 37: goto st17;
		case 61: goto st32;
	}
	goto st16;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 33: goto tr61;
		case 37: goto tr62;
		case 43: goto tr63;
		case 95: goto tr61;
		case 126: goto tr61;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto tr61;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr61;
		} else if ( (*p) >= 64 )
			goto tr61;
	} else
		goto tr61;
	goto st16;
tr61:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
	goto st33;
tr63:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st33;
tr67:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st33;
tr69:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st33;
tr73:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 901 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto st33;
		case 37: goto tr65;
		case 38: goto tr66;
		case 43: goto tr67;
		case 59: goto tr66;
		case 95: goto st33;
		case 126: goto st33;
	}
	if ( (*p) < 64 ) {
		if ( 35 <= (*p) && (*p) <= 58 )
			goto st33;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st33;
	} else
		goto st33;
	goto st16;
tr62:
#line 19 "ext/query_parser/parser.rl"
	{
        encoded = 0;
        buffer = p;
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st34;
tr65:
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st34;
tr71:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
#line 24 "ext/query_parser/parser.rl"
	{
        encoded = 1;
    }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 951 "ext/query_parser/parser.c"
	if ( (*p) == 37 )
		goto st18;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st35;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st36;
	} else
		goto st36;
	goto st14;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 37 )
		goto st17;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st33;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st33;
	} else
		goto st33;
	goto st16;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 37 )
		goto tr29;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr69;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr70;
	} else
		goto tr70;
	goto tr28;
tr70:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 1003 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr69;
		case 37: goto tr71;
		case 38: goto tr72;
		case 43: goto tr73;
		case 59: goto tr72;
		case 95: goto tr69;
		case 126: goto tr69;
	}
	if ( (*p) < 64 ) {
		if ( 35 <= (*p) && (*p) <= 58 )
			goto tr69;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr69;
	} else
		goto tr69;
	goto tr30;
tr36:
#line 28 "ext/query_parser/parser.rl"
	{
        rb_raise(rb_eArgError, "invalid encoding");
    }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 1032 "ext/query_parser/parser.c"
	switch( (*p) ) {
		case 33: goto tr35;
		case 37: goto tr74;
		case 43: goto tr75;
		case 61: goto tr76;
		case 91: goto tr77;
		case 95: goto tr35;
		case 126: goto tr35;
	}
	if ( (*p) < 39 ) {
		if ( 35 <= (*p) && (*p) <= 36 )
			goto tr35;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr35;
		} else if ( (*p) >= 64 )
			goto tr35;
	} else
		goto tr35;
	goto tr30;
tr10:
#line 32 "ext/query_parser/parser.rl"
	{
        current_key = rb_enc_str_new(buffer, p - buffer, encoding);

        if (encoded) current_key = rb_funcall(unescaper, rb_intern("call"), 1, current_key);
